# random

openCV-stuff/: .gitignore
openCV-stuff/1st/: CMakeLists.txt  main.cpp
openCV-stuff/hand_gesture_recognition/: CMakeLists.txt  builder.py
openCV-stuff/hand_gesture_recognition/inc/: utils.h  vision_analysis.h
openCV-stuff/hand_gesture_recognition/src/: main.cc  utils.cc  vision_analysis.cc
sudoku-solver/: CMakeLists.txt
sudoku-solver/inc/: sudoku.h
sudoku-solver/src/: puzzle.c  sudoku.c
